--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,6 +62,32 @@ jobs:
           # A list of test groups that require YugabyteDB to be running
           yugabytedb: |
             ["itest-harmonydb", "itest-harmonytask"]
+          # A list of test groups that require Proof Parameters to be fetched
+          parameters: |
+            [
+              "itest-api",
+              "itest-deals_offline",
+              "itest-deals_padding",
+              "itest-deals_partial_retrieval_dm-level",
+              "itest-deals_pricing",
+              "itest-deals",
+              "itest-direct_data_onboard_verified",
+              "itest-direct_data_onboard",
+              "itest-net",
+              "itest-path_detach_redeclare",
+              "itest-path_type_filters",
+              "itest-sealing_resources",
+              "itest-sector_finalize_early",
+              "itest-sector_import_full",
+              "itest-sector_import_simple",
+              "itest-sector_unseal",
+              "itest-wdpost_no_miner_storage",
+              "itest-wdpost_worker_config",
+              "itest-worker_upgrade",
+              "itest-worker",
+              "multicore-sdr",
+              "unit-storage"
+            ]
         run: |
           # Create a list of integration test groups
           itests="$(
@@ -90,6 +116,9 @@ jobs:
 
           # Apply the needs_yugabytedb flag to the groups
           groups="$(jq -n --argjson g "$groups" --argjson y "$yugabytedb" '$g | map(. + {"needs_yugabytedb": ([.name] | inside($y)) })')"
+
+          # Apply the needs_parameters flag to the groups
+          groups="$(jq -n --argjson g "$groups" --argjson p "$parameters" '$g | map(. + {"needs_parameters": ([.name] | inside($p)) })')"
 
           # Output the groups
           echo "groups=$groups"
@@ -144,7 +173,8 @@ jobs:
       - uses: ./.github/actions/install-go
       - run: go install gotest.tools/gotestsum@latest
       - run: make deps
-      - uses: actions/cache/restore@v4
+      - if: ${{ matrix.needs_parameters }}
+        uses: actions/cache/restore@v4
         with:
           key: ${{ needs.fetch.outputs.key }}
           path: ${{ needs.fetch.outputs.path }}
