--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     env:
-      PUBLISH: ${{ startsWith(github.ref, 'refs/tags/') }}
+      # Do not publish until CircleCI is deprecated
+      PUBLISH: false
+      # PUBLISH: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
       - uses: actions/checkout@v4
         with:
