--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  # This enables the workflow to create GitHub releases
-  contents: write
+permissions: {}
 
 jobs:
   build:
@@ -68,6 +66,9 @@ jobs:
             lotus-worker
   release:
     name: Release [publish=${{ startsWith(github.ref, 'refs/tags/') }}]
+    permissions:
+      # This enables the job to create and/or update GitHub releases
+      contents: write
     runs-on: ubuntu-latest
     needs: [build]
     env:
