--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -4,14 +4,14 @@ on:
   schedule:
   - cron: '0 12 * * *'
 
+permissions: {}
+
 jobs:
   stale:
-
-    runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
-
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/stale@v9
       with:
