--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
   discover:
@@ -239,7 +238,7 @@ jobs:
           path: ${{ steps.make_deps.outputs.path }}
           lookup-only: true
       - if: steps.restore_fetch_params.outputs.cache-hit != 'true'
-        uses: ./.github/actions/install-ubuntu-deps
+        uses: ./.github/actions/install-system-dependencies
       - if: steps.restore_fetch_params.outputs.cache-hit != 'true'
         uses: ./.github/actions/install-go
       - if: steps.restore_fetch_params.outputs.cache-hit != 'true' || steps.restore_make_deps.outputs.cache-hit != 'true'
@@ -272,7 +271,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-      - uses: ./.github/actions/install-ubuntu-deps
+      - uses: ./.github/actions/install-system-dependencies
       - uses: ./.github/actions/install-go
       - run: go install gotest.tools/gotestsum@latest
       - name: Restore cached make deps outputs
