fix itest in GA

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -125,7 +125,7 @@ jobs:
           # A list of test groups that require YugabyteDB to be running
           # In CircleCI, all jobs had yugabytedb running as a sidecar.
           yugabytedb: |
-            ["itest-harmonydb", "itest-harmonytask"]
+            ["itest-harmonydb", "itest-harmonytask", "itest-curio"]
           # A list of test groups that require Proof Parameters to be fetched
           # In CircleCI, only the following jobs had get-params set:
           # - unit-cli (✅)
