--- a/.github/workflows/sorted-pr-checks.yml
+++ b/.github/workflows/sorted-pr-checks.yml
@@ -6,6 +6,10 @@ on:
       pull_number:
         description: 'Pull request number'
         required: true
+      template:
+        description: 'Template'
+        required: false
+        default: 'sorted_by_result'
   workflow_run:
     workflows:
       - Build
@@ -29,3 +33,4 @@ jobs:
     uses: ipdxco/sorted-pr-checks/.github/workflows/comment.yml@v1
     with:
       pull_number: ${{ github.event.inputs.pull_number || github.event.workflow_run.pull_requests[0].number }}
+      template: ${{ github.event.inputs.template }}
