--- a/scripts/curio.service
+++ b/scripts/curio.service
@@ -1,12 +1,16 @@
 [Unit]
 Description=Curio
 After=network.target
-After=lotus-daemon.service
+# After=lotus-daemon.service  # Should not be on the same machine.
 
 [Service]
 ExecStart=/usr/local/bin/curio run
 Environment=GOLOG_FILE="/var/log/curio/curio.log"
 Environment=GOLOG_LOG_FMT="json"
 LimitNOFILE=1000000
+Restart=always
+RestartSec=2
+EnvironmentFile=/etc/curio.env
+
 [Install]
 WantedBy=multi-user.target
