--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -141,8 +141,8 @@
 
   # BoostAdapters is a list of tuples of miner address and port/ip to listen for market (e.g. boost) requests.
   # This interface is compatible with the lotus-miner RPC, implementing a subset needed for storage market operations.
-  # Strings should be in the format "actor:port" or "actor:ip:port". Default listen address is 0.0.0.0
-  # Example: "f0123:32100", "f0123:127.0.0.1:32100". Multiple addresses can be specified.
+  # Strings should be in the format "actor:ip:port". IP cannot be 0.0.0.0. We recommend using a private IP.
+  # Example: "f0123:127.0.0.1:32100". Multiple addresses can be specified.
   # 
   # When a market node like boost gives Curio's market RPC a deal to placing into a sector, Curio will first store the
   # deal data in a temporary location "Piece Park" before assigning it to a sector. This requires that at least one
