--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -123,6 +123,16 @@
   # type: bool
   #EnableSendCommitMsg = false
 
+  # Whether to abort if any sector activation in a batch fails (newly sealed sectors, only with ProveCommitSectors3).
+  #
+  # type: bool
+  #RequireActivationSuccess = true
+
+  # Whether to abort if any sector activation in a batch fails (updating sectors, only with ProveReplicaUpdates3).
+  #
+  # type: bool
+  #RequireNotificationSuccess = true
+
   # EnableMoveStorage enables the move-into-long-term-storage task to run on this curio instance.
   # This tasks should only be enabled on nodes with long-term storage.
   # 
